--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
 		<title>GIT</title>
+		<link rel="stylesheet" type="text/css" href="css/ligne.css"/>
 	</head>
 	<body>
+		<h1> Titre : GIT </h1>
 		<p> Alors comment ça va ? </p>
+		<img src="logo.png">
 	</body>
 </html>
