--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 		<link rel="stylesheet" type="text/css" href="css/ligne.css"/>
 	</head>
 	<body>
+
 		<h1> Titre : GIT </h1>
 		<p> Alors comment ça va ? </p>
 		<img src="logo.png">
+		toto
 	</body>
+
 </html>
