Add menu boutique

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<div>Menu Accueil Menu Boutique</div>
 	<head>
 		<title>GIT</title>
 		<link rel="stylesheet" type="text/css" href="css/ligne.css"/>
