--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <div>
 toto et titi
 <html>
+<div>Test accueil</div>
 	<head>
 		<title>GIT</title>
 		<link rel="stylesheet" type="text/css" href="css/ligne.css"/>
