Le commit distance

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<h1> Titre : GIT </h1>
-		<p> Alors comment ça va ? </p>
+		<p> Aoui bonjour commanet pasd </p>
 		<img src="logo.png">
 	</body>
 </html>
